# AweAgent

./: .env.example  .gitignore  README.md  pyproject.toml
awe_agent/: cli.py
awe_agent/core/agent/: __init__.py  context.py  loop.py  protocol.py  training.py  trajectory.py
awe_agent/core/config/: loader.py  schema.py
awe_agent/core/eval/: base.py  isolation.py  setup.py  utils.py
awe_agent/core/llm/: __init__.py  client.py  types.py
awe_agent/core/llm/backends/: ark.py  sglang.py
awe_agent/core/llm/format/: __init__.py  terminus_json.py
awe_agent/core/runtime/: config.py  docker.py  protocol.py
awe_agent/core/task/: __init__.py  protocol.py  runner.py
awe_agent/core/tool/: __init__.py
awe_agent/core/tool/builtin/: bash.py
awe_agent/core/tool/code/: __init__.py  bash.py  editor.py  finish.py  think.py
awe_agent/core/tool/search/: __init__.py  constraints.py  link_reader_tool.py  link_summary_tool.py  (+2 more)
awe_agent/integrations/: slime.py
awe_agent/scaffold/search_swe/: agent.py
awe_agent/scaffold/terminus_2/: agent.py  parser.py  tmux_session.py  tmux_tool.py
awe_agent/tasks/beyond_swe/: evaluator.py  task.py
awe_agent/tasks/terminal_bench_v2/: evaluator.py  task.py
configs/: default.yaml
configs/llm/: ark.yaml  azure.yaml
configs/llm/link_summary/: ark.yaml  azure.yaml
configs/prompts/: link_summary_example.md
configs/tasks/: beyond_swe_search.yaml
examples/: batch_evaluation.py  custom_agent.py
human_test/: test_ark_llm.py
human_test/tools/search/: test_constraints.py  test_link_reader.py  test_link_summary.py  test_search_tool.py
recipes/beyond_swe/: README.md  analyze_results.py
recipes/scale_swe/: README.md  eval_predictions.py
recipes/terminal_bench_v2/: README.md  run.py
scripts/: debug_beyond_swe.py
tests/: test_config.py
tests/agent/: test_agent_loop.py
tests/config/: test_config.py
tests/core/: test_enhancements.py  test_runtime_docker.py  test_trajectory.py  test_types.py
tests/plugins/: test_registry.py
tests/tasks/: test_scale_swe_eval_predictions.py  test_tasks.py
tests/tools/: test_builtin.py  test_search.py
(+1 files in other folders)
